# lensmint-camera

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Justfile  README.md  docker-compose.yml
.github/workflows/: owner-portal-ci.yml  pr-checks.yml
contracts/: .env.example  deployMultichain.sh  foundry.toml
contracts/script/: Deploy.s.sol  DeployAndVerify.s.sol  DeployLensMintVerifier.s.sol  DeployVerifier.s.sol  README.md  RegisterDevice.s.sol  SubmitProof.s.sol  deployMultichain.sh
contracts/src/: DeviceRegistry.sol  LensMintERC1155.sol  LensMintVerifier.sol
contracts/test/: DeviceRegistry.t.sol  DeviceRegistryPagination.t.sol  LensMintEIP712.t.sol  LensMintERC1155.t.sol  LensMintFuzz.t.sol  LensMintVerifier.t.sol  MintEditionDebug.t.sol  README.md
hardware-camera-app/: hardware_identity.py  raspberry_pi_camera_app.py
hardware-web3-service/: .dockerignore  .env.example  Dockerfile  claimClient.js  package.json  server.js  web3Service.js
lensmint-public-server/: .env.example  Dockerfile  dbService.js  package.json  server.js
owner-portal/: .env.example  Dockerfile  README.md  package.json
owner-portal/src/: App.jsx
relayer-backend/: package.json  tsconfig.json
relayer-backend/src/: index.ts
relayer-backend/tools/: generate_keys.ts
rust-camera-daemon/identity-core/: Cargo.toml
rust-camera-daemon/identity-core/src/: lib.rs
rust-camera-daemon/lensmint-daemon/: Cargo.toml
rust-camera-daemon/lensmint-daemon/src/: app.rs  backend.rs  cmd.rs  keystore.rs  main.rs
rust-identity/: Cargo.toml
scripts/: benchmark_hash_fragility.py
(+27 files in other folders)
