[package]
name = "lensmint-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "pem"] }
eframe = "0.29"
libc = "0.2.186"
rand = "0.8"
tokio = { version = "1.52.3", features = ["full"] }
sled = "0.34"
image = "0.24"
uuid = { version = "1.10", features = ["v4"] }

sha2 = "0.10"
image_hasher = "1.2"
hex = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"